@@ -1,3 +1,7 @@
+5108.	[bug]		Named could fail to determine bottom of zone when
+			removing out of date keys leading to invalid NSEC
+			and NSEC3 records being added to the zone. [GL #771]
+
 5107.	[bug]		'host -U' did not work.	[GL #769]
 
 5104.	[cleanup]	Log clearer informational message when a catz zone
